--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "run-p start:*" ,
+    "start:react": "cd client && npm run start",
+    "start:api": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
