--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "run-p start:*" ,
+    "start": "run-p start:*",
     "start:react": "cd client && npm run start",
     "start:api": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
+    "run-p": "^0.0.0",
     "socket.io": "2.2.0"
   }
 }
