--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^2.0.20",
     "run-p": "^0.0.0",
     "socket.io": "2.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
